tests/vertical-slice/accept/array_repeat_rc_field_element.hew
type Shared {
    handle: Rc<i64>;
}

fn main() -> i64 {
    let source = Shared { handle: Rc::new(7) };
    let copies = [source; 3];
    let _ = copies;
    source.handle.strong_count()
}
