tests/vertical-slice/reject/rc_get_non_copy.hew
type Node { label: string }

fn main() {
    let rc = Rc::new(Node { label: "node" });
    let _ = rc.get();
}
